gcc/testsuite/rust/rustc/ui/issues/issue-39089.rs
fn f<T: ?for<'a> Sized>() {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

